# MosaicSim

./: .gitignore  .gitmodules  BSD-License.txt  CMakeLists.txt  HowToUseMosaicSim.md  InstallationCompilationExecution.md  LICENSE  Makefile  README.md  TODO.txt  cache  insert  makefile  memory  src_id
compiler/: CMakeLists.txt  Graph.hpp  GraphGen.cpp  RecordDynamicInfo.cpp  preproc.sh  tracer.cc
compiler_passes/decouple_compute/: CMakeLists.txt  DecoupleCompute.cpp  runpass
compiler_passes/decouple_supply/: CMakeLists.txt  DecoupleSupply.cpp  runpass
graphs/: BasicBlockNode.cpp  CMakeLists.txt  ConstantNode.cpp  GraphNode.cpp  InstructionNode.cpp  OperatorNode.cpp  Type.cpp
pass/profiler/: CMakeLists.txt  RecordDynamicInfo.cpp
passes/: CMakeLists.txt  ControlFlowGraph.cpp  DataDependencyGraph.cpp  Performance.cpp  ProgramDependenceGraph.cpp
passes/headers/: ControlFlowGraph.h  DataDependencyGraph.h  Graph.h
sim/: CMakeLists.txt  Config.h  Makefile  Statistics.h  base.h  common.h  common.hpp  compiler_driver.cpp  functional_cache.h  graphOpt.cc  graphOpt.h  header.h  main.cc  memory.cc  mosaic_driver.cpp  operation.cc  parms.cpp  parms.hpp  sim-apollo  sim-apollo.cpp  sim-apollo.hpp  sim.cc  sim.cpp  sim.h  sim.hpp  sim_driver.cpp
sim/aladdin/: power_func.h
sim/cacti-p/: Makefile
sim/config/: DDR3_micron_16M_8B_x8_sg15.ini  DDR3_micron_16M_8B_x8_sg3.ini  accel.txt  backup.txt  bfs_inorder.txt  bfs_ooo.txt  bfs_sim.txt  core_ASIC.txt  core_accel.txt  core_ariane.txt  core_cafe.txt  core_darpa.txt  core_inorder.txt  core_inorder_perfcache.txt  core_ooo.txt  core_ooo_perfcache.txt  default.txt  desc_config.txt  dramsys.ini  ewsd_inorder.txt  ewsd_sim.txt  experiment-00.txt  experiment-01.txt  experiment-02.txt  experiment-03.txt  experiment-04.txt  experiment-05.txt  experiment-06.txt  experiment-07.txt  experiment-08.txt  experiment-09.txt  experiment-10.txt  experiment-11.txt  experiment-12.txt  experiment-13.txt  experiment-14.txt  experiment-15.txt  experiment-16.txt  experiment-17.txt  experiment-18.txt  (+40 more)
sim/core/: Core.cc  Core.h  DynamicNode.cc  DynamicNode.h  LoadStoreQ.cc  LoadStoreQ.h
sim/dramsim2/: .gitignore
sim/executionModel/: DynamicNode.cc  DynamicNode.h
sim/graph/: Graph.cc  Graph.cpp  Graph.h  Graph.hpp  GraphOpt.h  GraphOpt.hpp
sim/include/: Callback.hpp  DRAMSim.hpp
sim/input/: ctrl.txt  graph.txt
sim/memsys/: .Cache.cc.swp  Cache.cc  Cache.cpp  Cache.h  Cache.hpp  CommMec.hpp  DRAM.cc  DRAM.cpp  DRAM.h  DRAM.hpp  FunctionalCache.cpp  FunctionalCache.h  FunctionalCache.hpp  L1Cache.cpp  L2Cache.cpp  LLCache.cpp  LoadStoreQ.cc  SimpleDRAM.cc  SimpleDRAM.cpp  SimpleDRAM.h  SimpleDRAM.hpp
sim/memsys/DRAMSim2/: AddressMapping.dep  AddressMapping.deppo  AddressMapping.po  Bank.dep  Bank.deppo  Bank.po  BankState.dep  BankState.deppo  BankState.po  BusPacket.dep  BusPacket.deppo  BusPacket.po  ClockDomain.dep  ClockDomain.deppo  ClockDomain.po  CommandQueue.dep  CommandQueue.deppo  CommandQueue.po  DRAMSim  IniReader.dep  IniReader.deppo  IniReader.po  MemoryController.dep  MemoryController.deppo  MemoryController.po  MemorySystem.dep  MemorySystem.deppo  MemorySystem.po  MultiChannelMemorySystem.cpp  MultiChannelMemorySystem.dep  MultiChannelMemorySystem.deppo  MultiChannelMemorySystem.po  PrintMacros.dep  PrintMacros.deppo  PrintMacros.po  Rank.dep  Rank.deppo  Rank.po  SimulatorObject.dep  SimulatorObject.deppo  (+5 more)
sim/misc/: .Reader.h.swp  Config.cc  Config.cpp  Config.h  Config.hpp  Memory_helpers.cpp  Memory_helpers.hpp  Reader.h  Reader.hpp  Statistics.cpp  Statistics.h  Statistics.hpp  reader.h
sim/power_model/: aladdin_power_model.cpp
sim/power_model/cacti-p/: Makefile  cacti.mk
sim/tests/: CMakeLists.txt  check.sh
sim/tests/acc_dense_layer/: main.cpp
sim/tests/acc_dense_layer/decades_base/: decades_base  dyn_data.bin0  dyn_data.bin1  main_pp.cpp  main_visited.cpp
sim/tests/acc_matmul/: main.cpp
sim/tests/acc_matmul/decades_base/: decades_base  dyn_data.bin0  dyn_data.bin1  main_pp.cpp  main_visited.cpp
sim/tests/acc_sdp/: main.cpp
sim/tests/acc_sdp/decades_base/: decades_base  dyn_data.bin0  dyn_data.bin1  main_pp.cpp  main_visited.cpp
sim/tests/bfs/: Makefile  main.cpp
sim/tests/bfs_fast_llamas/: Makefile  main.cpp
sim/tests/common/: common_spmm.h  graph.h  main_decades.h
sim/tests/graph_projections_fast_llamas/: Makefile  common.h  main.cpp
sim/tests/input_dirs/decades_base/: decades_base  test_visited.cpp
sim/tests/input_dirs/decades_decoupled_implicit/: decades_decoupled_implicit  test_pp.cpp  test_visited.cpp
sim/tests/pagerank_fast_llamas/: Makefile  graph.h  main.cpp
sim/tests/spmm/: Makefile  main.cpp
sim/tests/spmm/data/: Amat.txt  Bmat.txt  (+2 more)
sim/tests/sssp/: Makefile  graph.h  main.cpp
sim/tests/sssp_fast_llamas/: Makefile  graph.h  main.cpp
sim/tile/: Accelerator.cc  Accelerator.cpp  Accelerator.h  Accelerator.hpp  Bpred.cc  Bpred.cpp  Bpred.h  Bpred.hpp  Core.cc  Core.cpp  Core.h  Core.hpp  DESCQ.cpp  DESCQ.hpp  DynamicNode.cc  DynamicNode.cpp  DynamicNode.h  DynamicNode.hpp  ExampleTile.cc  ExampleTile.cc~  LoadStoreQ.cc  LoadStoreQ.cpp  LoadStoreQ.h  LoadStoreQ.hpp  TestTile.cc~  Tile.h  Tile.hpp
sim/tile/accelerator_models/: .gitmodules
sim/tile/tile_example/: .#README  CMakeLists.txt  Core.cc  DynamicNode.cc  ExampleTile.cc  README  README~  main.cc  setup.sh  setup.sh~
sim/tile/tile_example_to_remove/: ExampleTile.cc  README  main.cc
src/: CMakeLists.txt
src/graphs/: BasicBlockNode.cpp  CMakeLists.txt  ConstantNode.cpp  GraphNode.cpp  InstructionNode.cpp  OperatorNode.cpp  Type.cpp
src/passes/: CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowPass.cpp  DataDependenceGraph.cpp  DataDependencePass.cpp  MemoryDependenceGraph.cpp  MemoryDependencePass.cpp  ProgramPass.cpp  VisualizationPass.cpp
src/programs/: CMakeLists.txt  Hello.cpp
src/visitors/: CMakeLists.txt  ControlFlowVisitor.cpp  DataDependenceVisitor.cpp  DependenceVisitor.cpp  MemoryDependenceVisitor.cpp  ProgramDependenceVisitor.cpp  VisualizationVisitor.cpp
tae/llvmpass/pAnalysis/: CMakeLists.txt
(+592 files in other folders)
